--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -9,21 +9,6 @@ h1 {
     position: relative;
     left: 245px;
 }
-.wrapper {
-    background-color: beige;
-}
-.sec {
-    position: relative;
-    top: 70px;
-    color: #777777;
-    max-width: 960px;
-    margin: auto;
-    padding: 10px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    border: #dddddd solid;
-    background-color: white;
-    
-}
 a {
     text-decoration: none;
     padding: 20px;
@@ -37,12 +22,16 @@ a {
 }
 #portfolio {
     float: right;
+    padding: 20px;
 }
 #about {
     float:right;
+    border-right-color: #7777;
 }
 h2 {
-    clear: both;
+    clear: both;        
+    position: relative;
+    left: 220px;
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 20px;
@@ -50,27 +39,21 @@ h2 {
     font-size: 30px;
     overflow: auto;
 }
-.Bio {
-    font-size: 20pt;
-    line-height: .4in;
-}
-.Bio1  {
-    font-size: 20pt;
-    line-height: .4in;
-    
-}
-#Picture {
+.sec {
+    position: relative;
+    left: 60px;
+    top: 70px;
+    color: #777777;
+    max-width: 960px;
+    margin: auto;
     padding: 10px;
-    float: left;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border: #dddddd solid;
+    background-color: white;
 }
-.backpic {
-    clear: both;
-    size: 400px 400px;
-    overflow: auto; 
-}
+
 footer {
     background-color: #666666;
     text-align: center;
     padding: 20px;
-    overflow: auto;
 }
